discussion/kv_engine/158362/158362_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45654: Move to pausable task

Change-Id: If983145100e8f871d2c49caa5da9f744c6134b4b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-07-29 11:40:18.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-29 12:37:29.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/194/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0058/0158]: ep workload stats...(69 ms) OK


99% tests passed, 1 tests failed out of 409

Total Test time (real) = 845.85 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/194/ )

Timeout of a CTest test 409/409 Test #253: ep_testsuite.full_eviction.comp_active ........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/194/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/120/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/120/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/120/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/129/ : UNSTABLE

Clang Analyser identified one or more potential bugs - see <a href="clangScanBuildBugs">clangScanBuildBugs</a> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/129/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9599/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/127/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/126/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/130/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/127/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/125/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/35/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-29 12:38:42.000000000
Message: 
Patch Set 4:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/195/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/195/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/120/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/120/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/120/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/129/ : UNSTABLE

Clang Analyser identified one or more potential bugs - see <a href="clangScanBuildBugs">clangScanBuildBugs</a> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/129/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9599/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/127/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/126/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/130/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/127/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/125/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/35/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
